--- a/demo/Dockerfile.demo
+++ b/demo/Dockerfile.demo
@@ -2,10 +2,9 @@ FROM openjdk:17-jdk-alpine
 VOLUME /tmp
 ARG JAVA_OPTS
 ENV JAVA_OPTS=$JAVA_OPTS
-WORKDIR /demo
-COPY ./ .
-RUN ./mvnw clean package
-#COPY target/demo-0.0.1-SNAPSHOT.jar demo.jar
+#COPY ./ .
+#RUN ./mvnw clean package
+COPY target/demo-0.0.1-SNAPSHOT.jar demo.jar
 EXPOSE 8080
 ENTRYPOINT exec java $JAVA_OPTS -jar demo.jar
 # For Spring-Boot project, use the entrypoint below to reduce Tomcat startup time.
