--- a/demo/docker-compose.debug.yml
+++ b/demo/docker-compose.debug.yml
@@ -3,7 +3,9 @@ version: '3.4'
 services:
   db:
     image: mysql
-    command: --default-authentication-plugin=mysql_native_password
+    command: --init-file /data/application/init.sql --default-authentication-plugin=mysql_native_password
+    volumes:
+        - ./init.sql:/data/application/init.sql
     restart: always
     environment:
       - MYSQL_DATABASE=db_example
